# git-sqlite-filter

./: .geminiignore  .gitattributes  .gitignore  LICENSE  MANIFEST.in  Makefile  README.rst  final_results.txt  git-sqlite-clean  git-sqlite-smudge  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  firefox-test.yml  full_check.yml
configs/: .gitconfig
git-sqlite/: clean.py  smudge.py
man/: git-sqlite-clean.1  git-sqlite-smudge.1
packaging/arch/: PKGBUILD
packaging/debian/: changelog  control  install  rules
packaging/rpm/: git-sqlite-filter.spec
src/git_sqlite_filter/: clean.py  smudge.py  utils.py
src/git_sqlite_filter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
test/: collation_edge.db  conftest.py  generate_fixture_dbs.py  generate_test_dbs.py  nss_native.py  reproduce_bug.py  run_tests.sh  test_clean_coverage.py  test_clean_extensive.py  test_filters.py  test_smudge_resilience.py  test_verification.py  titanic.db  verify_firefox_profile.py
test/fixtures/: autoincrement.db  blobs.db  collation_edge.db  constraints.db  fts.db  generated_cols.db  mixed_edge.db  titanic.db  trigger_persistence.db  version_0.db  version_huge.db
test/fixtures/ff-tests/: conftest.py  ffpass_utils.py  test_inspect.py  test_key.py  test_mixed_keys_run.py  test_mp_stdin.py  test_native_verify.py  test_run.py  test_sha256_mock.py
test/fixtures/ff-tests/firefox-146-aes/: logins.json
test/fixtures/ff-tests/firefox-14iv/: key4.db
test/fixtures/ff-tests/firefox-mixed-keys/: logins.json
test/fixtures/ff-tests/firefox-mp-84/: key4.db
test/fixtures/ff-tests/firefox-mp-test/: logins.json
test/fixtures/ff_tests/: conftest.py  ffpass_utils.py  test_inspect.py  test_key.py  test_mixed_keys_run.py  test_mp_stdin.py  test_sha256_mock.py
test/fixtures/ff_tests/firefox-146-aes/: key4.db
test/fixtures/ff_tests/firefox-14iv/: cert9.db  logins.json  pkcs11.txt
test/fixtures/ff_tests/firefox-70/: key4.db
test/fixtures/ff_tests/firefox-84/: key4.db
test/fixtures/ff_tests/firefox-mixed-keys/: key4.db
test/fixtures/ff_tests/firefox-mp-70/: key4.db
test/fixtures/ff_tests/firefox-mp-test/: key4.db
