[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "git-sqlite-filter"
version = "0.1.0"
authors = [
  { name="Shane", email="shane@example.com" },
]
description = "A clean/smudge git filter for SQLite databases with noise reduction"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Database",
]

[project.urls]
"Homepage" = "https://github.com/shane/git-sqlite-filter"

[project.scripts]
git-sqlite-clean = "git_sqlite_filter.clean:main"
git-sqlite-smudge = "git_sqlite_filter.smudge:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py37']

[tool.isort]
profile = "black"
